i18n/zh-CN/docusaurus-plugin-content-docs/version-2.1/sql-manual/sql-statements/table-and-view/table/SHOW-TABLE-ID.md
---
{
    "title": "SHOW TABLE ID",
    "language": "zh-CN"
}
---

<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->


### 描述

该语句用于根据 table id 查找对应的 database name, table name（仅管理员使用）

语法：

```sql
SHOW TABLE [table_id]
```

### 例子

 1. 根据 table id 查找对应的 database name, table name
     
     ```sql
     SHOW TABLE 10001;
     ```

### 关键词

    SHOW, TABLE, ID


